# camera_app

./: 3520缂栫爜鏉縜pi 浣跨敤璇存槑.md  CMakeLists.txt  HiF_media_ss522.h  Makefile  bash.sh  readme.txt  snap_test.c
apps/btt-agent/: main.c
apps/tools/: bt_at_test.c  bt_echo.c  mork_server.c  rec_30s.c  snap_test.c  uat_init.c
configs/: app.yaml
include/: HiF_media_ss522.h  agent.h  hgs_misc.h  hgs_type.h  net_client.h  proto.h  serial_mgr.h
lib/: libeXosip2.la
libs/agent/: agent.c  readme.txt
libs/net/: net_client.c
libs/proto/: proto.c
libs/serial/: serial_mgr.c
toolchains/: arm-mix410-linux.cmake
